--- a/playbook.yml
+++ b/playbook.yml
@@ -120,6 +120,12 @@
         name: stylelint
         global: yes
 
+    - name: Install go-jira
+      get_url:
+        url: https://github.com/Netflix-Skunkworks/go-jira/releases/download/v1.0.20/jira-linux-amd64
+        dest: /usr/bin/jira
+        mode: 0755
+
     - name: Set Timezone
       shell: "rm -f /etc/localtime && ln -sf /usr/share/zoneinfo/America/Los_Angeles /etc/localtime"
 
